# sitige-harness

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  alembic.ini  audit.py  pyproject.toml  status.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 2026_04_30_0001_initial_storage_schema.py
configs/: audit.yaml  compliance.yaml  content.yaml  crm.yaml  grafana-dashboard.json  match.yaml  observability.yaml  recruit.yaml  schedule.yaml  storage.yaml
docs/: API.md  OBSERVABILITY.md  PIPELINES.md  SCHEDULING.md  STORAGE.md
src/tetra_harness/: __init__.py  __main__.py  _version.py  cli.py  config.py  logging_setup.py  manifest.py
src/tetra_harness/agents/: __init__.py  base.py  compliance_agent.py  content_agent.py  crm_agent.py  intel_agent.py  match_agent.py  screen_agent.py
src/tetra_harness/api/: __init__.py  schemas.py  server.py  websocket.py
src/tetra_harness/api/routes/: __init__.py  auth.py  manifest.py  pipelines.py  runs.py  validators.py
src/tetra_harness/migrations/: __init__.py  migrator.py  v1_to_v2.py
src/tetra_harness/observability/: __init__.py  alerter.py  health.py  metrics.py  tracing.py
src/tetra_harness/pipelines/: __init__.py  base.py  compliance_pipeline.py  content_pipeline.py  crm_pipeline.py  match_pipeline.py  recruit_pipeline.py
src/tetra_harness/scheduling/: __init__.py  dlq.py  idempotency.py  jobs.py  scheduler.py
src/tetra_harness/storage/: __init__.py  artifact.py  cache.py  db.py  models.py  secrets.py
src/tetra_harness/utils/: __init__.py  cost_tracker.py  llm_client.py  retry.py  subprocess_safe.py
src/tetra_harness/validators/: __init__.py  base.py  build_health.py  compliance.py  content_quality.py  env_keys.py  file_existence.py  legal_doc.py  pricing.py  risk.py  secret_scanner.py
tests/: conftest.py  test_api.py  test_basics.py  test_observability.py  test_pipelines.py  test_quality.py  test_scheduling.py  test_storage.py  test_upgrade.py  test_validators.py
